err/django-template-minimizer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_template_minimizer-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tmin'...
Listing './lib/python3.5/site-packages/tmin/management'...
Listing './lib/python3.5/site-packages/tmin/management/commands'...
Compiling './lib/python3.5/site-packages/tmin/management/commands/_JavascriptMinify.py'...
***   File "./lib/python3.5/site-packages/tmin/management/commands/_JavascriptMinify.py", line 227
    print ' + %s' % f
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tmin/management/commands/_SimpleHTMLParser.py'...
***   File "./lib/python3.5/site-packages/tmin/management/commands/_SimpleHTMLParser.py", line 52
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tmin/management/commands/_TemplateTextMinimizer.py'...
***   File "./lib/python3.5/site-packages/tmin/management/commands/_TemplateTextMinimizer.py", line 409
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tmin/management/commands/minimizetemplates.py'...
***   File "./lib/python3.5/site-packages/tmin/management/commands/minimizetemplates.py", line 190
    print 'Files:    %s' % num_files
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
